--- a/examples/simple-cloudlets/pom.xml
+++ b/examples/simple-cloudlets/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>eu.mosaic_cloud.examples</groupId>
 		<artifactId>examples-parent</artifactId>
-		<version>0.4.1_mosaic_dev-SNAPSHOT</version>
+		<version>0.4.2_mosaic_dev-SNAPSHOT</version>
 		<relativePath>../parent</relativePath>
 	</parent>
 	
@@ -45,5 +45,13 @@
 			</plugin>
 		</plugins>
 	</build>
+	
+	<licenses>
+		<license>
+			<name>Apache 2</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 	
 </project>
