--- a/examples/simple-components/pom.xml
+++ b/examples/simple-components/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>eu.mosaic_cloud.examples</groupId>
 		<artifactId>examples-parent</artifactId>
-		<version>0.4.1_mosaic_dev-SNAPSHOT</version>
+		<version>0.4.2_mosaic_dev-SNAPSHOT</version>
 		<relativePath>../parent</relativePath>
 	</parent>
 	
@@ -17,27 +17,27 @@
 	
 	<dependencies>
 		<dependency>
-			<groupId>eu.mosaic_cloud.platform</groupId>
+			<groupId>eu.mosaic_cloud.components</groupId>
 			<artifactId>components-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>eu.mosaic_cloud.platform</groupId>
+			<groupId>eu.mosaic_cloud.components</groupId>
 			<artifactId>components-container</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>eu.mosaic_cloud.platform</groupId>
+			<groupId>eu.mosaic_cloud.components</groupId>
 			<artifactId>components-launcher</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>eu.mosaic_cloud.platform</groupId>
+			<groupId>eu.mosaic_cloud.components</groupId>
 			<artifactId>components-tools</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>eu.mosaic_cloud.platform</groupId>
+			<groupId>eu.mosaic_cloud.tools</groupId>
 			<artifactId>tools-classpath-exporter</artifactId>
 			<version>${project.version}</version>
 		</dependency>
@@ -77,5 +77,13 @@
 			</plugin>
 		</plugins>
 	</build>
+	
+	<licenses>
+		<license>
+			<name>Apache 2</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 	
 </project>
