--- a/interoperability-core/pom.xml
+++ b/interoperability-core/pom.xml
@@ -6,10 +6,10 @@
 	<modelVersion>4.0.0</modelVersion>
 	
 	<parent>
-		<groupId>eu.mosaic_cloud.platform</groupId>
-		<artifactId>platform-parent</artifactId>
-		<version>0.4.1_mosaic_dev-SNAPSHOT</version>
-		<relativePath>../platform-parent</relativePath>
+		<groupId>eu.mosaic_cloud.interoperability</groupId>
+		<artifactId>interoperability-parent</artifactId>
+		<version>0.4.2_mosaic_dev-SNAPSHOT</version>
+		<relativePath>../interoperability-parent</relativePath>
 	</parent>
 	
 	<artifactId>interoperability-core</artifactId>
@@ -17,10 +17,18 @@
 	
 	<dependencies>
 		<dependency>
-			<groupId>eu.mosaic_cloud.platform</groupId>
+			<groupId>eu.mosaic_cloud.tools</groupId>
 			<artifactId>tools-callbacks</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
+	
+	<licenses>
+		<license>
+			<name>Apache 2</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 	
 </project>
