--- a/interoperability-parent/pom.xml
+++ b/interoperability-parent/pom.xml
@@ -6,22 +6,22 @@
 	<modelVersion>4.0.0</modelVersion>
 	
 	<parent>
-		<groupId>eu.mosaic_cloud.components</groupId>
-		<artifactId>components-parent</artifactId>
+		<groupId>eu.mosaic_cloud.tools</groupId>
+		<artifactId>tools-parent</artifactId>
 		<version>0.4.2_mosaic_dev-SNAPSHOT</version>
-		<relativePath>../components-parent</relativePath>
+		<relativePath>../tools-parent</relativePath>
 	</parent>
 	
-	<artifactId>components-core</artifactId>
-	<name>mosaic-components-core</name>
+	<groupId>eu.mosaic_cloud.interoperability</groupId>
+	<artifactId>interoperability-parent</artifactId>
+	<packaging>pom</packaging>
+	<name>mosaic-interoperability-parent</name>
 	
-	<dependencies>
-		<dependency>
-			<groupId>eu.mosaic_cloud.tools</groupId>
-			<artifactId>tools-callbacks</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-	</dependencies>
+	<modules>
+		<module>../interoperability-core</module>
+		<module>../interoperability-tools</module>
+		<module>../interoperability-zeromq</module>
+	</modules>
 	
 	<licenses>
 		<license>
