--- a/platform-parent/pom.xml
+++ b/platform-parent/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>eu.mosaic_cloud</groupId>
 		<artifactId>parent</artifactId>
-		<version>0.4.1_mosaic_dev-SNAPSHOT</version>
+		<version>0.4.2_mosaic_dev-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 	
@@ -19,25 +19,10 @@
 	
 	<modules>
 		<module>../cloudlets</module>
-		<module>../components-container</module>
-		<module>../components-core</module>
-		<module>../components-launcher</module>
-		<module>../components-tools</module>
 		<module>../connectors</module>
 		<module>../drivers</module>
-		<module>../interoperability-core</module>
-		<module>../interoperability-tools</module>
-		<module>../interoperability-zeromq</module>
-		<module>../jetty-httpg-connector</module>
 		<module>../platform-core</module>
 		<module>../platform-interop</module>
-		<module>../tools-callbacks</module>
-		<module>../tools-classpath-exporter</module>
-		<module>../tools-exceptions</module>
-		<module>../tools-json</module>
-		<module>../tools-miscellaneous</module>
-		<module>../tools-transcript</module>
-		<module>../zeromq</module>
 	</modules>
 	
 	<dependencies>
@@ -87,5 +72,13 @@
 			</plugin>
 		</plugins>
 	</build>
+	
+	<licenses>
+		<license>
+			<name>Apache 2</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 	
 </project>
