--- a/tools-parent/pom.xml
+++ b/tools-parent/pom.xml
@@ -9,19 +9,22 @@
 		<groupId>eu.mosaic_cloud</groupId>
 		<artifactId>parent</artifactId>
 		<version>0.4.2_mosaic_dev-SNAPSHOT</version>
-		<relativePath>../..</relativePath>
+		<relativePath>..</relativePath>
 	</parent>
 	
-	<groupId>eu.mosaic_cloud.examples</groupId>
-	<artifactId>examples-parent</artifactId>
+	<groupId>eu.mosaic_cloud.tools</groupId>
+	<artifactId>tools-parent</artifactId>
 	<packaging>pom</packaging>
-	<name>mosaic-examples-parent</name>
+	<name>mosaic-tools-parent</name>
 	
 	<modules>
-		<module>../realtime-feeds-indexer</module>
-		<module>../simple-cloudlets</module>
-		<module>../simple-components</module>
-		<module>../interoperability</module>
+		<module>../tools-callbacks</module>
+		<module>../tools-classpath-exporter</module>
+		<module>../tools-exceptions</module>
+		<module>../tools-json</module>
+		<module>../tools-miscellaneous</module>
+		<module>../tools-transcript</module>
+		<module>../tools-zeromq</module>
 	</modules>
 	
 	<dependencies>
@@ -66,7 +69,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${versions.plugins.surefire}</version>
 				<configuration>
-					<argLine>-Djava.library.path=${java.library.path}</argLine>
+					<argLine>-Djava.library.path=${java.library.path}:${project.basedir}/lib</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
