--- a/interoperability-parent/pom.xml
+++ b/interoperability-parent/pom.xml
@@ -23,6 +23,10 @@
 		<module>../interoperability-zeromq</module>
 	</modules>
 	
+	<properties>
+		<license.licenseName>apache_v2</license.licenseName>
+	</properties>
+	
 	<licenses>
 		<license>
 			<name>Apache 2</name>
