--- a/components-container/pom.xml
+++ b/components-container/pom.xml
@@ -72,6 +72,7 @@
 	</build>
 	
 	<properties>
+		<license.licenseName>apache_v2</license.licenseName>
 		<_maven_pom_package>mosaic-components-java-component-container</_maven_pom_package>
 	</properties>
 	
