--- a/components-core/pom.xml
+++ b/components-core/pom.xml
@@ -23,6 +23,10 @@
 		</dependency>
 	</dependencies>
 	
+	<properties>
+		<license.licenseName>apache_v2</license.licenseName>
+	</properties>
+	
 	<licenses>
 		<license>
 			<name>Apache 2</name>
