--- a/drivers/pom.xml
+++ b/drivers/pom.xml
@@ -114,6 +114,7 @@
 	</build>
 	
 	<properties>
+		<license.licenseName>apache_v2</license.licenseName>
 		<_maven_pom_package>mosaic-components-java-driver-container</_maven_pom_package>
 	</properties>
 	
