--- a/examples/simple-cloudlets/pom.xml
+++ b/examples/simple-cloudlets/pom.xml
@@ -46,6 +46,10 @@
 		</plugins>
 	</build>
 	
+	<properties>
+		<license.licenseName>apache_v2</license.licenseName>
+	</properties>
+	
 	<licenses>
 		<license>
 			<name>Apache 2</name>
