--- a/tools-callbacks/pom.xml
+++ b/tools-callbacks/pom.xml
@@ -28,6 +28,10 @@
 		</dependency>
 	</dependencies>
 	
+	<properties>
+		<license.licenseName>apache_v2</license.licenseName>
+	</properties>
+	
 	<licenses>
 		<license>
 			<name>Apache 2</name>
