Change cloudlet state to cloudlet context

--- a/cloudlets/src/main/resources/eu/mosaic_cloud/cloudlet/config.properties
+++ b/cloudlets/src/main/resources/eu/mosaic_cloud/cloudlet/config.properties
@@ -29,7 +29,7 @@ AmqpQueueAccessor.8=amqp.passive
 AmqpQueueAccessor.9=amqp.durable
 AmqpQueueConsumer.0=amqp.auto_ack
 CloudletDummyContainer.0=cloudlet.main_class
-CloudletDummyContainer.1=cloudlet.state_class
+CloudletDummyContainer.1=cloudlet.context_class
 CloudletDummyContainer.2=cloudlet.resource_file
 CloudletDummyContainer.3=cloudlet.no_instances
 KeyValueAccessor.0=kvstore.connector_name
