--- a/examples/simple-cloudlets/src/main/resources/ping-cloudlet.properties
+++ b/examples/simple-cloudlets/src/main/resources/ping-cloudlet.properties
@@ -18,7 +18,7 @@
 # #L%
 ###
 cloudlet.main_class=eu.mosaic_cloud.cloudlet.tests.PingCloudlet$LifeCycleHandler
-cloudlet.state_class=eu.mosaic_cloud.cloudlet.tests.PingCloudlet$PingCloudletState
+cloudlet.context_class=eu.mosaic_cloud.cloudlet.tests.PingCloudlet$PingCloudletContext
 cloudlet.resource_file=ping-cloudlet.properties
 
 queue.consumer.amqp.exchange=pingpong-exchange
