--- a/examples/simple-cloudlets/src/main/resources/pong-cloudlet.properties
+++ b/examples/simple-cloudlets/src/main/resources/pong-cloudlet.properties
@@ -18,7 +18,7 @@
 # #L%
 ###
 cloudlet.main_class=eu.mosaic_cloud.cloudlet.tests.PongCloudlet$LifeCycleHandler
-cloudlet.state_class=eu.mosaic_cloud.cloudlet.tests.PongCloudlet$PongCloudletState
+cloudlet.context_class=eu.mosaic_cloud.cloudlet.tests.PongCloudlet$PongCloudletContext
 cloudlet.resource_file=pong-cloudlet.properties
 
 queue.consumer.amqp.exchange=pingpong-exchange
