Renamed HTTPG-Jetty package

--- a/components-httpg-jetty-connector/pom.xml
+++ b/components-httpg-jetty-connector/pom.xml
@@ -79,7 +79,7 @@
 					</descriptorRefs>
 					<archive>
 						<manifest>
-							<mainClass>eu.mosaic_cloud.jetty.connectors.httpg.ServerCommandLine</mainClass>
+							<mainClass>eu.mosaic_cloud.components.httpg.jetty.connector.ServerCommandLine</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
