Fix Maven wrapper scripts to not require artifact downloading

--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
 				<version>${versions.plugins.antrun}</version>
 				<executions>
 					<execution>
-						<phase>${_maven_pom_phase}</phase>
+						<phase>none</phase>
 						<goals>
 							<goal>run</goal>
 						</goals>
