--- a/tools-zeromq/pom.xml
+++ b/tools-zeromq/pom.xml
@@ -16,13 +16,13 @@
 	<name>mosaic-tools-zeromq</name>
 	
 	<properties>
-		<license.licenseName>gpl_v3</license.licenseName>
+		<license.licenseName>lgpl_v3</license.licenseName>
 	</properties>
 	
 	<licenses>
 		<license>
-			<name>GPL 3</name>
-			<url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
+			<name>LGPL 3</name>
+			<url>http://www.gnu.org/licenses/lgpl-3.0.txt</url>
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
