--- a/tools-zeromq/pom.xml
+++ b/tools-zeromq/pom.xml
@@ -15,6 +15,29 @@
 	<artifactId>tools-zeromq</artifactId>
 	<name>mosaic-tools-zeromq</name>
 	
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>license-maven-plugin</artifactId>
+				<version>${versions.plugins.license}</version>
+				<executions>
+					<execution>
+						<phase>verify</phase>
+						<goals>
+							<goal>download-licenses</goal>
+							<goal>update-project-license</goal>
+							<goal>update-file-header</goal>
+						</goals>
+						<configuration>
+							<skipUpdateLicense>true</skipUpdateLicense>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+	
 	<properties>
 		<license.licenseName>lgpl_v3</license.licenseName>
 	</properties>
