--- a/drivers/pom.xml
+++ b/drivers/pom.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project
-			xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-			xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<parent>
 		<groupId>eu.mosaic_cloud.platform</groupId>
 		<artifactId>platform-parent</artifactId>
 		<version>0.4.2_mosaic_dev-SNAPSHOT</version>
 		<relativePath>../platform-parent</relativePath>
 	</parent>
-	
+
 	<artifactId>drivers</artifactId>
 	<name>mosaic-drivers</name>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>eu.mosaic_cloud.platform</groupId>
@@ -72,6 +71,25 @@
 			<groupId>spy</groupId>
 			<artifactId>spymemcached</artifactId>
 			<version>${versions.dependencies.spy}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.sun.jdmk</groupId>
+					<artifactId>jmxtools</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.sun.jmx</groupId>
+					<artifactId>jmxri</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>javax.jms</groupId>
+					<artifactId>jms</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>couchbase</groupId>
+			<artifactId>couchbase-client</artifactId>
+			<version>${versions.dependencies.couchbase}</version>
 		</dependency>
 		<dependency>
 			<groupId>redis.clients</groupId>
@@ -84,7 +102,7 @@
 			<version>${versions.dependencies.riak}</version>
 		</dependency>
 	</dependencies>
-	
+
 	<build>
 		<plugins>
 			<plugin>
@@ -112,12 +130,12 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+
 	<properties>
 		<license.licenseName>apache_v2</license.licenseName>
 		<_maven_pom_package>mosaic-components-java-driver-container</_maven_pom_package>
 	</properties>
-	
+
 	<licenses>
 		<license>
 			<name>Apache 2</name>
@@ -125,5 +143,5 @@
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
-	
+
 </project>
