--- a/drivers/pom.xml
+++ b/drivers/pom.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project
+			xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+				xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
+	
 	<parent>
 		<groupId>eu.mosaic_cloud.platform</groupId>
 		<artifactId>platform-parent</artifactId>
 		<version>0.4.2_mosaic_dev-SNAPSHOT</version>
 		<relativePath>../platform-parent</relativePath>
 	</parent>
-
+	
 	<artifactId>drivers</artifactId>
 	<name>mosaic-drivers</name>
-
+	
 	<dependencies>
 		<dependency>
 			<groupId>eu.mosaic_cloud.platform</groupId>
@@ -102,7 +103,7 @@
 			<version>${versions.dependencies.riak}</version>
 		</dependency>
 	</dependencies>
-
+	
 	<build>
 		<plugins>
 			<plugin>
@@ -130,12 +131,12 @@
 			</plugin>
 		</plugins>
 	</build>
-
+	
 	<properties>
 		<license.licenseName>apache_v2</license.licenseName>
 		<_maven_pom_package>mosaic-components-java-driver-container</_maven_pom_package>
 	</properties>
-
+	
 	<licenses>
 		<license>
 			<name>Apache 2</name>
@@ -143,5 +144,5 @@
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
-
+	
 </project>
